--- a/goodbye.html
+++ b/goodbye.html
@@ -4,4 +4,6 @@
 <ul>
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
+  <li> Romanian: Pace Vou </li>
+  <li> French: Au Revoir </li>
 </ul>
